<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.main.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/epoch_input"
                    android:inputType="number"
                    android:hint="Input train epoch here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/templatefile"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_tempfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/selectfile"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_tempfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectfile" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/save_rtb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save File"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:id="@+id/compute_rtb"
                        android:layout_height="wrap_content"
                        android:text="Compute Only"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testfile"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_testfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/selectfile"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_testfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectfile" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <!--        <Button-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:text="@string/selectfile"/>-->
                <TextView
                    android:id="@+id/tv_costtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_pred" />


            <!-- new dtw -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_dtw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_prediction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_new_optimize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_new_optimize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_dtw_optimize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_optimized_prediction" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_new_nd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_new_nd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_dtw_nd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="New DTW Impl 2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_new_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_new_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_dtw_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="CNN-LSTM" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_rf_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_rf_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_rf_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="New Random Forest Model" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_svc_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_svc_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_svc_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="New SVM Model" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_knn_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_knn_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_knn_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="New KNN Model" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_file"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_test_result_gs_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/selectfile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_costtime_gs_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_predicate_gs_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="New GaussianNB Model" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>